compiler/tests/ar/errors/noret_rettype_ar.salam
// لغة: العربية
// EXPECT: E012
لايرجع دالة سيء() : صحيح:
    بينما true:
    نهاية
نهاية

دالة الرئيسية:
    سيء()
نهاية
